updated pagination list view util used